--- a/internal/component.template
+++ b/internal/component.template
@@ -34,9 +34,9 @@
 package <component>
 
 import (
-	"github.com/Azure/azure-storage-fuse/v2/common/config"
-	"github.com/Azure/azure-storage-fuse/v2/common/log"
-	"github.com/Azure/azure-storage-fuse/v2/internal"
+	"lyvecloudfuse/common/config"
+	"lyvecloudfuse/common/log"
+	"lyvecloudfuse/internal"
 	"context"
 	"fmt"
 )
