--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -141,6 +141,12 @@ azstorage:
   validate-md5: true|false <validate md5 on download. Impacts performance. works only when file-cache component is part of the pipeline>
   virtual-directory: true|false <support virtual directories without existence of a special marker blob>
 
+s3storage:
+  bucket-name:
+  key-id:
+  secret-key:
+  region:
+  endpoint:
 
 # Mount all configuration
 mountall:
