--- a/azure-pipeline-templates/build.yml
+++ b/azure-pipeline-templates/build.yml
@@ -65,7 +65,7 @@ steps:
   - task: Go@0
     inputs:
       command: 'build'
-      arguments: "-tags ${{ parameters.tags }} -o blobfuse2"
+      arguments: "-tags ${{ parameters.tags }} -o lyvecloudfuse"
       workingDirectory: ${{ parameters.working_directory }}
     displayName: "Go Build"
 
@@ -79,8 +79,8 @@ steps:
     
   #Verification of built binary
   - script: |
-      sudo chmod +x ${working_directory}/blobfuse2
-      ${working_directory}/blobfuse2 --version
+      sudo chmod +x ${working_directory}/lyvecloudfuse
+      ${working_directory}/lyvecloudfuse --version
     displayName: 'Test binary'
     env:
       working_directory: ${{ parameters.working_directory }}
