Update tests to use variable file

--- a/test-scripts/helper/var.env
+++ b/test-scripts/helper/var.env
@@ -1,10 +1,8 @@
-#!/bin/bash
-
 # This is the mount directory that the container will mount in
-mount_dir=/home/jfan/Documents/e2e-test
+export MOUNT_DIR=~/e2e-test
 
 # This is a temporary folder used to write some files during the test
-mount_tmp=/home/jfan/Documents/e2e-temp
+export MOUNT_TMP=~/e2e-temp
 
 # This is the directory where you cloned the repo
-work_dir=/home/jfan/Documents/lyvecloudfuse
+export WORK_DIR=~/lyvecloudfuse
