Update blobfuse2-vunerability-scanning.yaml for Azure Pipelines

--- a/blobfuse2-vunerability-scanning.yaml
+++ b/blobfuse2-vunerability-scanning.yaml
@@ -26,6 +26,8 @@ steps:
     displayName: "Get Dependencies"
 
   - script: |
+      sudo apt update
+      sudo apt upgrade
      ./TrivySetup.sh
     displayName: 'Install Trivy'
 
