--- a/blobfuse2-windows.yaml
+++ b/blobfuse2-windows.yaml
@@ -42,6 +42,12 @@ jobs:
       displayName: "Build"
 
     - script: |
+      install_winfsp.bat
+    displayName: "Install WinFSP"
+    continueOnError: false
+    workingDirectory: ./
+
+    - script: |
         cnfFile=$HOME/azuretest.json
         echo $cnfFile
         touch $cnfFile
