--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -144,13 +144,16 @@ azstorage:
   validate-md5: true|false <validate md5 on download. Impacts performance. works only when file-cache component is part of the pipeline>
   virtual-directory: true|false <support virtual directories without existence of a special marker blob>
 
+# S3 storage configuration
 s3storage:
-  bucket-name:
-  key-id:
-  secret-key:
-  region:
-  endpoint:
-  subdirectory: <name of subdirectory to be mounted instead of whole container>
+  # Required
+  bucket-name: <name of the bucket to be mounted>
+  key-id: <S3 access key ID (your globally unique user identifier)>
+  secret-key: <S3 secret access key (your private key)>
+  region: <S3 region. (example - us-east-1)>
+  endpoint: <S3 endpoint URL (example - https://s3.us-east-1.lyvecloud.seagate.com)>
+  # Optional
+  subdirectory: <name of subdirectory to be mounted instead of whole bucket>
 
 # Mount all configuration
 mountall:
