--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -67,7 +67,8 @@ libfuse:
   extension: <physical path to extension library>
   disable-writeback-cache: true|false <disallow libfuse to buffer write requests if you must strictly open files in O_WRONLY or O_APPEND mode. alternatively, you can set ignore-open-flags.>
   ignore-open-flags: true|false <ignore the append and write only flag since O_APPEND and O_WRONLY is not supported with writeback caching. alternatively, you can disable-writeback-cache. Default value is true>
- 
+  network-share: true|false <runs as a network share. may improve performance when latency to cloud is high. only supported on Windows.
+
   # Streaming configuration
 stream:
   # If block-size-mb, blocks-per-file or cache-size-mb are 0, the stream component will not cache blocks. 
