--- a/lyvecloudfuse-code-coverage.yaml
+++ b/lyvecloudfuse-code-coverage.yaml
@@ -314,8 +314,10 @@ stages:
                 ./lyvecloudfuse.test -test.v -test.coverprofile=$(WORK_DIR)/lyvecloudfuse_stream.cov mount $(MOUNT_DIR) --config-file=$(lyvecloudfuse_STREAM_CFG) --foreground=true &
                 sleep 10
                 ps -aux | grep lyvecloudfuse
-                ./lyvecloudfuse.test mount list
-                for i in {10,50,100,200,500,1024}; do echo $i; done | parallel --will-cite -j 5 'diff $(WORK_DIR)/myfile_{} $(MOUNT_DIR)/myfile_{}' 
+                rm -rf $(MOUNT_DIR)/*
+                cd test/e2e_tests
+                go test -v -timeout=7200s ./... -args -mnt-path=$(MOUNT_DIR) -tmp-path=$(TEMP_DIR)
+                cd -
                 sudo fusermount -u $(MOUNT_DIR) 
                 sleep 5
               workingDirectory: $(WORK_DIR)
