--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -33,6 +33,7 @@ foreground: true|false <run lyvecloudfuse in foreground or background>
 read-only: true|false <mount in read only mode - used for Streaming and FUSE>
 allow-other: true|false <allow other users to access the mounted directory - used for FUSE and File Cache>
 nonempty: true|false <allow mounting on non-empty directory - used for FUSE>
+restricted-characters-windows: true|false <allows filenames with restricted characters to appear on Windows - used for AzStorage and S3Storage>
 
 # Dynamic profiler related configuration. This helps to root-cause high memory/cpu usage related issues.
 dynamic-profile: true|false <allows to turn on dynamic profiler for cpu/memory usage monitoring. Only for debugging, shall not be used in production>
@@ -147,7 +148,6 @@ azstorage:
   validate-md5: true|false <validate md5 on download. Impacts performance. works only when file-cache component is part of the pipeline>
   virtual-directory: true|false <support virtual directories without existence of a special marker blob>
   disable-compression: true|false <disable transport layer content encoding like gzip, set this flag to true if blobs have content-encoding set in container>
-  restricted-characters-windows: true|false <allows filenames with restricted characters to appear on Windows>
 
 # S3 storage configuration
 s3storage:
@@ -159,7 +159,6 @@ s3storage:
   region: <S3 region. Default - us-east-1>
   endpoint: <S3 endpoint URL. Default - https://s3.[region].lyvecloud.seagate.com>
   subdirectory: <name of subdirectory to be mounted instead of whole bucket>
-  restricted-characters-windows: true|false <allows filenames with restricted characters to appear on Windows>
 
 # Mount all configuration
 mountall:
