--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -102,7 +102,7 @@ attr_cache:
   timeout-sec: <time attributes can be cached (in sec). Default - 120 sec>
   no-cache-on-list: true|false <do not cache attributes during listing, to optimize performance>
   no-symlinks: true|false <to improve performance disable symlink support. symlinks will be treated like regular files.>
-  no-cache-dirs: true|false <to make directory timestamps accurate disable caching directories. Breaks s3storage.>
+  no-cache-dirs: true|false <to prevent double-listing directories and to make timestamps accurate, disable caching directories. Breaks s3storage.>
   
 # Loopback configuration
 loopbackfs:
