--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -166,6 +166,7 @@ s3storage:
   subdirectory: <name of subdirectory to be mounted instead of whole bucket>
   part-size-mb: <size of each part for multipart uploads (in MB). Default - 8 MB>
   upload-cutoff-mb: <files exceeding this size will use be uploaded in parts (in MB). Default - 200 MB>
+  concurrency: <number of parallel upload/download threads. Default - 32>
 
 # Mount all configuration
 mountall:
