--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -164,7 +164,7 @@ s3storage:
   region: <S3 region. Default - us-east-1>
   endpoint: <S3 endpoint URL. Default - https://s3.[region].lyvecloud.seagate.com>
   subdirectory: <name of subdirectory to be mounted instead of whole bucket>
-  part-size-mb: <size of each part for multipart uploads (in MB). Default - 8 MB>
+  part-size-mb: <size of each part for multipart uploads (in MB). Valid range is 5MB to 5120MB. Default - 8 MB>
   upload-cutoff-mb: <files exceeding this size will use be uploaded in parts (in MB). Default - 100 MB>
   concurrency: <number of parallel upload/download threads. Default - 10>
   disable-concurrent-download: <disables concurrent downloads. Can improve performance with small files at the cost of slow downloads for large objects>
