--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,8 @@ linters:
     - gosimple                  # Linter for Go source code that specializes in simplifying code
     - govet                     # Vet examines Go source code and reports suspicious constructs
     - ineffassign               # Detects when assignments to existing variables are not used
+    - misspell                  # Finds commonly misspelled English words in comments.
+    - predeclared               # Find code that shadows one of Go's predeclared identifiers.
     - staticcheck               # Set of rules from staticcheck.
     - typecheck                 # Like the front-end of a Go compiler, parses and type-checks Go code
     - unused                    # Checks Go code for unused constants, variables, functions and types
