--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -14,16 +14,16 @@ concurrency:
 jobs:
   BuildAndTest-Coverage:
     strategy:
-        matrix:
-          go: ['1.20']
-          job_name: ['linux']
-  
-          include:
-            - job_name: linux
-              os: ubuntu-latest
-              containerName: 'test-cnt-ubn'
-              fuselib: libfuse-dev
-              fuselib2: fuse
+      matrix:
+        go: ['1.20']
+        job_name: ['linux']
+
+        include:
+          - job_name: linux
+            os: ubuntu-latest
+            containerName: 'test-cnt-ubn'
+            fuselib: libfuse-dev
+            fuselib2: fuse
 
     runs-on:  ${{ matrix.os }}
     env:
@@ -40,6 +40,13 @@ jobs:
     - name: checkout
       uses: actions/checkout@v4.0.0
 
+    - name: Install Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: ${{ matrix.go }}
+        check-latest: true
+    - run: go version
+
     - name: Install libfuse
       run: |-
         sudo apt-get update --fix-missing -o Dpkg::Options::="--force-confnew"
@@ -50,6 +57,19 @@ jobs:
         sudo mkdir -p ${{ env.ROOT_DIR }}
         sudo chown -R `whoami` ${{ env.ROOT_DIR }}
         chmod 777 ${{ env.ROOT_DIR }}
+
+    - name: Build
+      run: |
+        ./build.sh
+
+    - name: Go module cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
     
     - name: UT Code Coverage
       run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
