--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - local-storage-github-action
   pull_request:
   workflow_dispatch:
     inputs:
@@ -31,6 +32,14 @@ jobs:
 
     name: Build and Test on
     runs-on:  ${{ matrix.os }}
+
+    env:
+      S3TEST_ENDPOINT: http://localhost:4566
+      S3TEST_REGION: us-east-1
+      S3TEST_ACCESS_KEY: test
+      S3TEST_SECRET_KEY: test
+      S3TEST_BUCKET_NAME: test
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -129,11 +138,11 @@ jobs:
           echo $cnfFile
           touch $cnfFile
           echo "{" > $cnfFile
-          echo "\"bucket-name\"": "\"${{ secrets.S3TEST_BUCKET_NAME }}\"", >> $cnfFile
-          echo "\"access-key\"": "\"${{ secrets.S3TEST_ACCESS_KEY }}\"", >> $cnfFile
-          echo "\"secret-key\"": "\"${{ secrets.S3TEST_SECRET_KEY }}\"", >> $cnfFile
-          echo "\"endpoint\"": "\"${{ secrets.S3TEST_ENDPOINT }}\"", >> $cnfFile
-          echo "\"region\"": "\"${{ secrets.S3TEST_REGION }}\"" >> $cnfFile
+          echo "\"bucket-name\"": "\"${{ env.S3TEST_BUCKET_NAME }}\"", >> $cnfFile
+          echo "\"access-key\"": "\"${{ env.S3TEST_ACCESS_KEY }}\"", >> $cnfFile
+          echo "\"secret-key\"": "\"${{ env.S3TEST_SECRET_KEY }}\"", >> $cnfFile
+          echo "\"endpoint\"": "\"${{ env.S3TEST_ENDPOINT }}\"", >> $cnfFile
+          echo "\"region\"": "\"${{ env.S3TEST_REGION }}\"" >> $cnfFile
           echo "}" >> $cnfFile
         if: matrix.os == 'ubuntu-latest'
 
@@ -143,17 +152,32 @@ jobs:
           Write-Host $cnfFile
           $content = @"
           {
-            "bucket-name": "${{ secrets.S3TEST_BUCKET_NAME }}",
-            "access-key": "${{ secrets.S3TEST_ACCESS_KEY }}",
-            "secret-key": "${{ secrets.S3TEST_SECRET_KEY }}",
-            "endpoint": "${{ secrets.S3TEST_ENDPOINT }}",
-            "region": "${{ secrets.S3TEST_REGION }}"
+            "bucket-name": "${{ env.S3TEST_BUCKET_NAME }}",
+            "access-key": "${{ env.S3TEST_ACCESS_KEY }}",
+            "secret-key": "${{ env.S3TEST_SECRET_KEY }}",
+            "endpoint": "${{ env.S3TEST_ENDPOINT }}",
+            "region": "${{ env.S3TEST_REGION }}"
           }
           "@
           $content | Out-File -FilePath $cnfFile -Encoding Ascii
         shell: powershell
         if: matrix.os == 'windows-latest'
 
+      - name: Start LocalStack
+        run: |
+          pip install localstack awscli-local[ver1] # install LocalStack cli and awslocal
+          docker pull localstack/localstack         # Make sure to pull the latest version of the image
+          localstack start -d                       # Start LocalStack in the background
+          
+          echo "Waiting for LocalStack startup..."  # Wait 30 seconds for the LocalStack container
+          localstack wait -t 30                     # to become ready before timing out 
+          echo "Startup complete"          
+      
+      - name: Run some Tests against LocalStack
+        run: |
+          awslocal s3 mb s3://test
+          awslocal s3 ls
+          
       - name: Run unit tests
         run: go test -v -timeout=2h ./... --tags=unittest
 
