--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -184,6 +184,7 @@ s3storage:
   upload-cutoff-mb: <files exceeding this size will use be uploaded in parts (in MB). Default - 100 MB>
   concurrency: <number of parallel upload/download threads. Default - 5>
   disable-concurrent-download: <disables concurrent downloads. Can improve performance with small files at the cost of slow downloads for large objects>
+  usePathStyle: true|false <enable the client to use path-style addressing. Only use if required by your S3 cloud>
 
 # Mount all configuration
 mountall:
