--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -54,7 +54,11 @@ jobs:
     - name: Create Directory Structure
       run: |-
         sudo mkdir -p ${{ env.MOUNT_DIR }}
+        sudo chown -R `whoami` ${{ env.MOUNT_DIR }}
+        chmod 777 ${{ env.MOUNT_DIR }}
         sudo mkdir -p ${{ env.TEMP_DIR }}
+        sudo chown -R `whoami` ${{ env.TEMP_DIR }}
+        chmod 777 ${{ env.TEMP_DIR }}
 
     - name: Go module cache
       uses: actions/cache@v3
@@ -108,8 +112,8 @@ jobs:
         echo "\"region\"": "\"${{ secrets.S3TEST_REGION }}\"" >> $cnfFile
         echo "}" >> $cnfFile
     
-    - name: UT Code Coverage
-      run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
+    # - name: UT Code Coverage
+    #   run: go test -v -timeout=1h ./... --tags=unittest,storagetest -covermode count -coverprofile ./cloudfuse_ut.cov
     
     - name: Build coverage binary
       run: go test -coverpkg="./..." -covermode=count -c -o cloudfuse.test
